infrastructure/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.k8s.tstuessi.com`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
