infrastructure/monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.k8s.tstuessi.com`)
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
